--- a/hilong/package.json
+++ b/hilong/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
